fisx for isCacheable amd added hasTranslation()  #EA-3484