@@ -181,7 +181,9 @@ public class TranslationRestIT extends BaseTranslationTest {
     
     //check that there are data in the cache
     redisCacheService.fillWithCachedTranslations(translObjs);
-    assertTrue(translObjs.stream().filter(el -> el.getIsCached()).collect(Collectors.toList()).size()==2);
+    final List<TranslationObj> cachedTranslations = translObjs.stream().filter(el -> el.getIsCached()).toList();
+    //check if all are availble in the cache
+    assertTrue(cachedTranslations.size() == translObjs.size());
     
     String cachedResult = mockMvc
         .perform(
